; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_dxtn.c_wined3d_dxt1_decode.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_dxtn.c_wined3d_dxt1_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@txc_dxtn_handle = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [59 x i8] c"Cannot find a conversion function from format DXT1 to %s.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wined3d_dxt1_decode(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %16 = load i32, i32* @txc_dxtn_handle, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %7
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %8, align 4
  br label %82

20:                                               ; preds = %7
  %21 = load i32, i32* %13, align 4
  switch i32 %21, label %76 [
    i32 129, label %22
    i32 128, label %31
    i32 133, label %40
    i32 132, label %49
    i32 131, label %58
    i32 130, label %67
  ]

22:                                               ; preds = %20
  %23 = load i32*, i32** %9, align 8
  %24 = load i32*, i32** %10, align 8
  %25 = load i32, i32* %11, align 4
  %26 = load i32, i32* %12, align 4
  %27 = load i32, i32* %14, align 4
  %28 = load i32, i32* %15, align 4
  %29 = load i32, i32* @TRUE, align 4
  %30 = call i32 @dxt1_to_x8r8g8b8(i32* %23, i32* %24, i32 %25, i32 %26, i32 %27, i32 %28, i32 %29)
  store i32 %30, i32* %8, align 4
  br label %82

31:                                               ; preds = %20
  %32 = load i32*, i32** %9, align 8
  %33 = load i32*, i32** %10, align 8
  %34 = load i32, i32* %11, align 4
  %35 = load i32, i32* %12, align 4
  %36 = load i32, i32* %14, align 4
  %37 = load i32, i32* %15, align 4
  %38 = load i32, i32* @FALSE, align 4
  %39 = call i32 @dxt1_to_x8r8g8b8(i32* %32, i32* %33, i32 %34, i32 %35, i32 %36, i32 %37, i32 %38)
  store i32 %39, i32* %8, align 4
  br label %82

40:                                               ; preds = %20
  %41 = load i32*, i32** %9, align 8
  %42 = load i32*, i32** %10, align 8
  %43 = load i32, i32* %11, align 4
  %44 = load i32, i32* %12, align 4
  %45 = load i32, i32* %14, align 4
  %46 = load i32, i32* %15, align 4
  %47 = load i32, i32* @TRUE, align 4
  %48 = call i32 @dxt1_to_x4r4g4b4(i32* %41, i32* %42, i32 %43, i32 %44, i32 %45, i32 %46, i32 %47)
  store i32 %48, i32* %8, align 4
  br label %82

49:                                               ; preds = %20
  %50 = load i32*, i32** %9, align 8
  %51 = load i32*, i32** %10, align 8
  %52 = load i32, i32* %11, align 4
  %53 = load i32, i32* %12, align 4
  %54 = load i32, i32* %14, align 4
  %55 = load i32, i32* %15, align 4
  %56 = load i32, i32* @FALSE, align 4
  %57 = call i32 @dxt1_to_x4r4g4b4(i32* %50, i32* %51, i32 %52, i32 %53, i32 %54, i32 %55, i32 %56)
  store i32 %57, i32* %8, align 4
  br label %82

58:                                               ; preds = %20
  %59 = load i32*, i32** %9, align 8
  %60 = load i32*, i32** %10, align 8
  %61 = load i32, i32* %11, align 4
  %62 = load i32, i32* %12, align 4
  %63 = load i32, i32* %14, align 4
  %64 = load i32, i32* %15, align 4
  %65 = load i32, i32* @TRUE, align 4
  %66 = call i32 @dxt1_to_x1r5g5b5(i32* %59, i32* %60, i32 %61, i32 %62, i32 %63, i32 %64, i32 %65)
  store i32 %66, i32* %8, align 4
  br label %82

67:                                               ; preds = %20
  %68 = load i32*, i32** %9, align 8
  %69 = load i32*, i32** %10, align 8
  %70 = load i32, i32* %11, align 4
  %71 = load i32, i32* %12, align 4
  %72 = load i32, i32* %14, align 4
  %73 = load i32, i32* %15, align 4
  %74 = load i32, i32* @FALSE, align 4
  %75 = call i32 @dxt1_to_x1r5g5b5(i32* %68, i32* %69, i32 %70, i32 %71, i32 %72, i32 %73, i32 %74)
  store i32 %75, i32* %8, align 4
  br label %82

76:                                               ; preds = %20
  br label %77

77:                                               ; preds = %76
  %78 = load i32, i32* %13, align 4
  %79 = call i32 @debug_d3dformat(i32 %78)
  %80 = call i32 @FIXME(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %79)
  %81 = load i32, i32* @FALSE, align 4
  store i32 %81, i32* %8, align 4
  br label %82

82:                                               ; preds = %77, %67, %58, %49, %40, %31, %22, %18
  %83 = load i32, i32* %8, align 4
  ret i32 %83
}

declare dso_local i32 @dxt1_to_x8r8g8b8(i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @dxt1_to_x4r4g4b4(i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @dxt1_to_x1r5g5b5(i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32 @debug_d3dformat(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
